plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.2'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'com.epages.restdocs-api-spec' version '0.20.1'
}

group = 'buncheoleasy'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

// Spring MVC 의 @PathVariable / @RequestParam 파라미터 이름 자동 매핑이 가능하도록 컴파일 시 파라미터명을 클래스 파일에 포함.
tasks.withType(JavaCompile).configureEach {
    if (!options.compilerArgs.contains('-parameters')) {
        options.compilerArgs << '-parameters'
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // JPA
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // MySQL
    runtimeOnly 'com.mysql:mysql-connector-j'

    // H2 Database for testing
    testRuntimeOnly 'com.h2database:h2'
    testImplementation 'org.testcontainers:junit-jupiter:1.20.4'
    testImplementation 'org.testcontainers:mysql:1.20.4'

    // Spring Security
    implementation "org.springframework.boot:spring-boot-starter-security"
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    testImplementation 'org.springframework.security:spring-security-test'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.12.7'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.7'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.7'

    // Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // AWS S3
    implementation platform('software.amazon.awssdk:bom:2.27.21')
    implementation 'software.amazon.awssdk:s3'

    // Spring REST Docs + OpenAPI 생성
    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
    testImplementation 'com.epages:restdocs-api-spec-mockmvc:0.20.1'
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()

    doFirst {
        def agent = configurations.testRuntimeClasspath.find {
            it.name.contains("byte-buddy-agent")
        }
        if (agent != null) {
            jvmArgs "-javaagent:${agent.absolutePath}"
        }
    }
}

openapi3 {
    server = '/'
    title = 'BuncheolEasy API'
    description = '분철이지 API 명세서'
    version = '0.0.1'
    format = 'yaml'
    outputDirectory = 'build/api-spec'
}

tasks.register('copyApiDocs', Copy) {
    dependsOn 'openapi3'
    from("${layout.buildDirectory.get()}/api-spec") {
        include 'openapi3.yaml'
    }
    into "${layout.buildDirectory.get()}/api-docs-static/static/v1/api-docs"
}

tasks.named('bootRun') {
    dependsOn 'copyApiDocs'
    classpath += files("${layout.buildDirectory.get()}/api-docs-static")
}

tasks.named('bootJar') {
    dependsOn 'copyApiDocs'
    from("${layout.buildDirectory.get()}/api-docs-static") {
        into 'BOOT-INF/classes'
    }
}
